tests/snapshots/corpus__docx_handmade_rich.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Rich objects follow.
**Quarterly Widgets**
| Quarter | Widgets |
| --- | --- |
| Q1 | 10 |
| Q2 | 14 |
- Plan
- Build
- Ship
tiny dot image
Embedded object: Excel.Sheet.12
After the objects.
--- stderr ---
