tests/snapshots/corpus__docx_handmade_strict.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== section 1 ==
# Strict heading
Strict body with **toggled bold**
--- stderr ---
