tests/snapshots/corpus__malformed_brokenpersist_recovers.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Deck Title Slide
- Top level point
  - Nested detail
- Second point with emphasis
Numbers Slide
Region
Total
North
42
Grouped shapes below.
Inside a group shape.
> Speaker note for the intro slide.
> Second slide notes mention the table.
--- stderr ---
